<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">System Monitor</string>
    <string name="tab_cpu">CPU</string>
    <string name="tab_gpu">GPU</string>
    <string name="tab_memory">内存</string>
    <string name="tab_network">网络</string>
    <string name="tab_battery">电池</string>
    <string name="tab_dashboard">仪表盘</string>
    <string name="tab_hardware">硬件</string>
    <string name="tab_system">系统</string>
    <string name="menu_dark_mode">深色模式</string>
    <string name="menu_export">导出数据</string>
    <string name="menu_floating_window">悬浮窗</string>
    <string name="menu_settings">设置</string>
    <string name="cpu_temperature">CPU 温度</string>
    <string name="cpu_frequency">CPU 频率</string>
    <string name="battery_level">电池电量</string>
    <string name="ram_usage">RAM 使用率</string>
    <string name="storage_usage">存储使用率</string>
    <string name="gpu_info">GPU 信息</string>
    <string name="sensor_list">传感器列表</string>
    <string name="system_info">系统信息</string>
    <string name="storage_info">存储信息</string>
    <string name="wifi_info">WiFi 信息</string>
    <string name="mobile_network">移动网络</string>
    <string name="network_interfaces">网络接口</string>
    <string name="gps_status">GPS 状态</string>
    <string name="battery_dashboard">电池仪表盘</string>
    <string name="battery_temperature">电池温度</string>
    <string name="battery_power">电池功率</string>
    <string name="charge_status">充电状态</string>
    <string name="na">N/A</string>
    <string name="export_share_title">分享设备信息</string>
    <string name="export_text_title">设备信息报告</string>
    <string name="permission_location_title">需要定位权限</string>
    <string name="permission_location_message">用于获取 GPS 和网络位置信息，以便展示定位状态。</string>
    <string name="permission_overlay_title">需要悬浮窗权限</string>
    <string name="permission_overlay_message">用于在其他应用上方显示设备信息悬浮窗。</string>
    <string name="permission_phone_title">需要电话权限</string>
    <string name="permission_phone_message">用于获取移动网络类型和运营商信息。</string>
    <string name="permission_grant">授予</string>
    <string name="permission_deny">拒绝</string>
    <string name="search_hint">搜索…</string>
    <string name="copy_toast">已复制到剪贴板</string>
    <string name="export_success">导出成功</string>
    <string name="export_failed">导出失败</string>
    <string name="floating_service_title">设备信息监控</string>
    <string name="floating_service_desc">正在后台监控设备信息</string>
    <string name="floating_cpu_temp">CPU: %s</string>
    <string name="floating_battery">电池: %d%%</string>
    <string name="floating_ram">RAM: %d%%</string>
    <string name="floating_cpu_freq">频率: %s</string>
    <string name="settings_refresh_interval">刷新间隔</string>
    <string name="settings_opacity">透明度</string>
    <string name="settings_show_items">显示项目</string>
    <string name="cpu_governor">调度器</string>
    <string name="cpu_cores">核心数</string>
    <string name="cpu_architecture">架构</string>
    <string name="gpu_model">GPU 型号</string>
    <string name="gpu_vendor">厂商</string>
    <string name="gpu_frequency">GPU 频率</string>
    <string name="gpu_temperature">GPU 温度</string>
    <string name="total_ram">总内存</string>
    <string name="available_ram">可用内存</string>
    <string name="used_ram">已用内存</string>
    <string name="swap_total">交换空间总量</string>
    <string name="swap_used">交换空间已用</string>
    <string name="zram_original">ZRAM 原始大小</string>
    <string name="zram_compressed">ZRAM 压缩后大小</string>
    <string name="compression_ratio">压缩比</string>
    <string name="internal_storage">内部存储</string>
    <string name="partition_mount">挂载点</string>
    <string name="wifi_ssid">SSID</string>
    <string name="wifi_bssid">BSSID</string>
    <string name="wifi_signal">信号强度</string>
    <string name="wifi_speed">连接速率</string>
    <string name="wifi_ipv4">IPv4</string>
    <string name="wifi_ipv6">IPv6</string>
    <string name="wifi_mac">MAC 地址</string>
    <string name="wifi_gateway">网关</string>
    <string name="wifi_dns">DNS</string>
    <string name="wifi_subnet">子网掩码</string>
    <string name="mobile_type">网络类型</string>
    <string name="mobile_operator">运营商</string>
    <string name="mobile_mcc_mnc">MCC/MNC</string>
    <string name="mobile_signal">信号强度</string>
    <string name="mobile_roaming">漫游</string>
    <string name="gps_enabled">GPS 已启用</string>
    <string name="gps_fix">已定位</string>
    <string name="gps_satellites">卫星数</string>
    <string name="gps_latitude">纬度</string>
    <string name="gps_longitude">经度</string>
    <string name="gps_accuracy">精度</string>
    <string name="battery_health">健康状态</string>
    <string name="battery_technology">电池技术</string>
    <string name="battery_voltage">电压</string>
    <string name="battery_capacity">当前容量</string>
    <string name="battery_design_capacity">设计容量</string>
    <string name="battery_cycle_count">循环次数</string>
    <string name="battery_power_mw">功率</string>
    <string name="charging">充电中</string>
    <string name="discharging">放电中</string>
    <string name="full">已充满</string>
    <string name="not_charging">未充电</string>
    <string name="unknown">未知</string>
    <string name="android_version">Android 版本</string>
    <string name="kernel_version">内核版本</string>
    <string name="build_fingerprint">Build 指纹</string>
    <string name="security_patch">安全补丁</string>
    <string name="bootloader">Bootloader</string>
    <string name="java_vm">Java 虚拟机</string>
</resources>
