<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_opacity"
        android:textAppearance="?attr/textAppearanceTitleMedium" />

    <SeekBar
        android:id="@+id/seekbar_opacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="85" />

    <TextView
        android:id="@+id/tv_opacity_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="85%"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_show_items"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:layout_marginTop="@dimen/margin_large" />

    <CheckBox
        android:id="@+id/cb_show_cpu_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cpu_temperature"
        android:checked="true" />

    <CheckBox
        android:id="@+id/cb_show_cpu_freq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cpu_frequency"
        android:checked="true" />

    <CheckBox
        android:id="@+id/cb_show_battery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/battery_level"
        android:checked="true" />

    <CheckBox
        android:id="@+id/cb_show_ram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ram_usage"
        android:checked="true" />

</LinearLayout>
